# cuda-demux

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GPU_DECOMPRESSION_RELEASE.md  README.md  SampleSheet.csv  checksums.sha256  cuda-demux-1.0.1-1.x86_64.rpm  cuda-demux_1.0.1_amd64.deb  test_runinfo.xml  test_xml_file  test_xml_file.cpp  test_xml_parsing.cpp  test_xml_simple  test_xml_simple.cpp
.github/workflows/: build-test.yml  package-release.yml  release.yml
MacOSX/: CMakeLists.txt  README.md  build_macos.sh
MacOSX/include/: metal_compute.h
MacOSX/shaders/: demux_kernels.metal
MacOSX/src/: bcl_parser_metal.mm  demux_metal.mm  main_metal.mm
benchmarks/cuda_demux_benchmark_20250927_191408/: planned_order.json
benchmarks/cuda_demux_benchmark_20250928_091824/: environment.json  planned_order.json
benchmarks/cuda_demux_benchmark_20250928_091824/metrics/: 20240905_SH00012_0050_ASC2066330-SC3.json
cuda-demux-1.0.1/DEBIAN/: control
docs/: CNAME  _config.yml  index.html  style.css
include/: bcl_parser.h  bcl_parser_cuda.h  common.h  demux.h  fastq_writer.h  gpu_decompressor.h  memory_utils.h  read_types.h
packaging/: README.md  SUBMISSION_GUIDE.md  build-packages.sh
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
packaging/rpm/: cuda-demux.spec
scripts/: benchmark_cuda_demux.py
scripts/benchmarks/cuda_demux_benchmark_20250928_102644/: environment.json  planned_order.json
scripts/benchmarks/cuda_demux_benchmark_20250928_102644/metrics/: 20240905_SH00012_0050_ASC2066330-SC3.json
src/: bcl_parser.cpp  bcl_parser_cuda.cu  common_adapters.cpp  demux.cpp  demux.cu  fastq_writer.cpp  gpu_decompressor.cu  main.cpp  memory_utils.cpp
tests/: test_demux.cpp
